<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    xmlns:android="http://schemas.android.com/apk/res/android">
 
    <ImageView
        android:id="@+id/routeLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_route_nazionale"
        android:src="@drawable/route_nazionale_logo" />

    <ProgressBar
        android:id="@+id/progressSplash"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/thanks_to" />
    
   <ImageView
        android:id="@+id/ngmLogo"
        android:layout_weight="0.50"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_ngm_mobile"
        android:src="@drawable/ngm_logo" />
 
</LinearLayout>
